Added post tweet funtionality Added tracking number of characters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codepath.apps.restclienttemplate">
+    package="com.codepath.apps.simpleTwitter">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,13 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RestClientTemplateKotlin">
         <activity
+            android:name=".ComposeActivity"
+            android:exported="false" />
+        <activity
             android:name=".TimelineActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            android:exported="true">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
